<resources>
    <string name="app_name">CV Maker</string>
    <string name="skills">Skills</string>
    <string name="languages">Languages</string>
    <string name="achievement">Achievement</string>
    <string name="interest">Interest</string>
    <string name="username">Jones Doe</string>
    <string name="user_profession">Android Developer</string>
    <string name="profile">Profile</string>
    <string name="about_yourself">A forward-thinking developer offering more than four years of experience building, integrating, testing, and supporting Android applications for mobile and tablet devices on the Android platform seeks a position with a top technology firm.</string>
    <string name="experienced">Experienced</string>
    <string name="experienced_title">Android Development</string>
    <string name="experienced_duration">3 years</string>
    <string name="description">Strong knowledge of Android SDK, different versions of Android, and how to deal with different screen sizes.</string>
    <string name="education">Education</string>
    <string name="degree_title">Degree Title</string>
    <string name="degree_duration">Degree Duration</string>
    <string name="projects">Projects</string>
    <string name="project_name">Online Application Portal System</string>
    <string name="project_description">This is android base application for student to resolving the daily issues in university face by the student.</string>
    <string name="project_tools">Android Studio, Xammp Server</string>
    <string name="email_gmail_com">jones_doe99@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="personal_information">Personal Information</string>
    <string name="names">Name</string>
    <string name="saves">Save</string>
    <string name="addresses">Washington Dc, America</string>
    <string name="mobile_nos">+44-0389485258</string>
    <string name="emails">Email</string>
    <!--personal information-->
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="about">About yourself</string>
    <string name="achievements">Achievements</string>
    <string name="add">+</string>
    <string name="from">16/10/2016</string>
    <string name="to">16/10/2020</string>
    <string name="add_education">Add Education</string>
    <string name="institute">Oxford university, UK</string>
    <string name="add_experienced">Add Experienced</string>
    <string name="project_title">Project Title</string>
    <string name="tools">Tools</string>
    <string name="add_projects">Add Projects</string>
    <string name="add_skill">Add Skill</string>
    <string name="add_achievement">Add Achievement</string>
    <string name="profession">Profession</string>
    <string name="next">Next</string>
    <string name="create_cv">Create CV</string>
    <string name="previous">Previous</string>
    <string name="view_cv">View CV</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="download">Download</string>
    <string name="resume_pdf">Resume.pdf</string>
    <string name="sine_of_resume">Sine of Resume</string>
    <string name="share">Share</string>
    <string name="properties">Properties</string>
    <string name="delete">Delete</string>
    <string name="firstLanguage">English</string>
    <string name="secondLanguages">Spanish</string>
    <string name="thirdLanguage">French</string>
    <string name="firstSkills">Android</string>
    <string name="secondLanguage">WordPress</string>
    <string name="thirdSkill">JAVA</string>
    <string name="fourthSkill">PHP</string>
    <string name="fifthSkill">Web Service</string>
    <string name="firstAchievement">Created a free Math app for kids that was downloaded over 250K times.</string>
    <string name="secondAchievement">Make GPS route finder with 10 million download on google play.</string>
    <string name="thirdAchievement">I have a good reputation on stack overflow .</string>
    <string name="save_cv">Save CV</string>
    <string name="university">School</string>
    <string name="Add">Add</string>
    <string name="fourthLanguage">Arabic</string>
    <string name="fifthLanguage">hindi</string>
    <string name="sixthSkill">Kotlin</string>
    <string name="seventhSkill">Web developer</string>
    <string name="eighthSkill">Desktop </string>
    <string name="new_cv">New CV</string>
    <string name="splahsh_text_id">Create Resume with Range of different templates</string>
    <string name="close_navigation">Cloase Drawyer</string>
    <string name="opnen_navigation">Open Drawyer</string>
    <string name="interstitial_full_screen">ca-app-pub-3940256099942544/1033173712</string>

</resources>