<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/titleID"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/project_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleID"
        app:layout_constraintTop_toBottomOf="@id/titleID"
        android:id="@+id/descriptionID"/>
    <TextView
        android:text="@string/project_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descriptionID"
        app:layout_constraintStart_toStartOf="@id/titleID"
        android:id="@+id/toolID"/>
</androidx.constraintlayout.widget.ConstraintLayout>