<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/skillLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/skills"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skillEditID"
            android:lines="1"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintStart_toStartOf="@id/skillLayout"
        app:layout_constraintTop_toBottomOf="@+id/skillLayout" />
    <Button
        app:layout_constraintBottom_toBottomOf="@id/saveBtn"
        app:layout_constraintTop_toTopOf="@id/saveBtn"
        app:layout_constraintStart_toEndOf="@id/saveBtn"
        app:layout_constraintEnd_toStartOf="@id/nextBtn"
        android:id="@+id/addBtn"
        android:text="@string/Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/skillLayout"
        app:layout_constraintTop_toBottomOf="@+id/skillLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>