<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/nameLayout"
            android:id="@+id/profileID"
            android:src="@drawable/ic_image"
            android:text="@string/profile_picture"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"/>
        <Button
            app:layout_constraintTop_toTopOf="@id/profileID"
            app:layout_constraintEnd_toEndOf="@id/nameLayout"
            android:id="@+id/selectPicBtnID"
            android:text="@string/select_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/profileID"
            android:layout_width="0dp"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/names">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/nameID"
                android:lines="1"
                android:inputType="textPersonName"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_marginTop="@dimen/_40sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/nameLayout"
            android:layout_width="0dp"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:id="@+id/emailID"
                android:lines="2"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNoLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            app:endIconMode="clear_text"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/mobile_no">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/phoneID"
                android:inputType="phone"
                android:lines="1"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/phoneNoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/address">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPostalAddress"
                android:lines="3"
                android:id="@+id/addressID"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/saveBtn"
            app:layout_constraintTop_toBottomOf="@+id/addressLayout"
            app:layout_constraintStart_toStartOf="@id/addressLayout"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/nextBtn"
            app:layout_constraintTop_toBottomOf="@+id/addressLayout"
            app:layout_constraintEnd_toEndOf="@id/addressLayout"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>