<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/educationLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/university"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eduEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/durationLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="From"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/educationLayout"
                app:layout_constraintStart_toStartOf="@id/educationLayout"
                app:layout_constraintTop_toBottomOf="@id/educationLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fromDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:clickable="true"
                    android:editable="false"
                    android:inputType="datetime" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/toLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="To"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/durationLayout"
                app:layout_constraintStart_toStartOf="@id/durationLayout"
                app:layout_constraintTop_toBottomOf="@id/durationLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/toDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/marksLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="Marks"
                app:helperText="e.g  90/100"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/skill_bg"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/durationLayout"
                app:layout_constraintStart_toStartOf="@id/durationLayout"
                app:layout_constraintTop_toBottomOf="@id/toLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/marks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:digits="01234567890./" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/eduBtn"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="@id/educationLayout"
                app:layout_constraintTop_toBottomOf="@id/marksLayout"
                android:text="@string/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/addBtn"
                app:layout_constraintStart_toEndOf="@id/eduBtn"
                app:layout_constraintEnd_toStartOf="@id/nextBtn"
                app:layout_constraintBottom_toBottomOf="@id/eduBtn"
                app:layout_constraintTop_toTopOf="@id/eduBtn"
                android:text="@string/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/nextBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/next"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/toLayout"
                app:layout_constraintTop_toBottomOf="@+id/marksLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>